# image-search

./: .env.example  .gitignore  README.md  app.py  download_model.py  embedder.py  plan.md  pyproject.toml  qwen3_vl_embedding.py  qwen3_vl_reranker.py  requirements.txt  vl_utils.py
docs/: github-ssh-setup-sop.md
templates/: index.html
tests/: test_core.py
