[project]
name = "image-semantic-search"
version = "1.0.0"
description = "Multimodal image semantic search powered by Qwen3-VL-Embedding"
requires-python = ">=3.10"
license = "MIT"

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["embedder", "app", "vl_utils", "qwen3_vl_embedding", "qwen3_vl_reranker"]
